[package]
name = "tilephys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.7"
hecs = "0.9.0"
macroquad = "0.3.15"
tiled = { git="https://github.com/aleokdev/rs-tiled.git", rev="6493fee"}
