[package]
name = "tilephys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
euclid = "0.22.7"
hecs = "0.9.0"
macroquad = "0.3.25"
quad-rand = "0.2.1"
rhai = {version="1.8.0", features=["only_i32","f32_float"]}
smallset = "0.1.1"
tiled = { git="https://github.com/mapeditor/rs-tiled.git", branch="next", default-features=false}

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
# for WASM we may want the following (but cargo doesn't have per-target profiles)
#opt-level = "z"
