[package]
name = "princess-robot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
enum-iterator = "1.2.0"
euclid = "0.22.7"
hecs = "0.9.0"
macroquad = { git="https://github.com/not-fl3/macroquad.git", rev="6184e3b" }
quad-rand = "0.2.1"
rhai = {version="1.12.0", features=["only_i32","f32_float","sync"]}
smallset = "0.1.1"
tiled = { git="https://github.com/mapeditor/rs-tiled.git", branch="next", default-features=false}

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
# for WASM we may want the following (but cargo doesn't have per-target profiles)
#opt-level = "z"
